@@ -2,6 +2,7 @@
 Add parameter reUseContainer to Run-AlPipeline to use existing container for the pipeline
 Include Tests-Marketing when installing test apps
 Add parameter SharedFolder to Run-AlPipeline to share a folder from the host to the container
+Allow to Run-AlPipeline without source and only installApps and/or installTestApps
 
 2.0.10
 Issue #1857 Compile-AppInBcContainer doesn't work with 19.0 containers
